data/derived/comb/progs/unify/prog3360.ml.out
Characters 50-84:
  (n mod 10 :: digitsOfInt (n / 10))
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
